--- a/src/index.css
+++ b/src/index.css
@@ -1060,4 +1060,17 @@
   .transition-perfect-spring {
     transition: var(--transition-spring);
   }
+
+  /* 3D Transform Utilities */
+  .transform-style-3d {
+    transform-style: preserve-3d;
+  }
+
+  .perspective-1000 {
+    perspective: 1000px;
+  }
+
+  .perspective-2000 {
+    perspective: 2000px;
+  }
 }
